feat: Added and used indexedDB for offline storage

--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   },
   "author": "Brandy Lee Camacho",
   "linkedIn": "https://www.linkedin.com/in/brandycamacho/",
-  "email": "brandy@udacity.com"
+  "email": "brandy@udacity.com",
+  "devDependencies": {}
 }
